welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: type red is not a member of object java.awt.Color
if(getCouleurSol():Color.red) {x=="S" }
                         ^Runner:5: error: type mismatch;
 found   : String
 required: Boolean
while(!estFaceMur||x!=="S") { avance();
                   ^